# du2023-ros2

./: .gitignore  README.md  pp_test.py  setup_scripts.sh
Open3D-PointNet/: .gitignore  datasets.py  download.py  open3d_visualilze.py  pointnet_test.py
advanced_tutorial/: CMakeLists.txt  package.xml
advanced_tutorial/launch/: group_action.launch.py  ifcondition.launch.py  launch_arg.launch.py  launch_arg_info.launch.py
ament_general/: CMakeLists.txt  package.xml
ament_general/ament_general/: helper.py  my_py_node.py
ament_general/include/ament_general/: my_node.hpp
ament_general/src/: main.cpp  my_node.cpp
composition_tutorial/: CMakeLists.txt  package.xml  temp.txt
composition_tutorial/include/composition_tutorial/: basic_component.hpp  camera_node.hpp  common.hpp  image_view_node.hpp  talker_component.hpp  watermark_node.hpp
composition_tutorial/launch/: image_pipeline_extra.launch.py  talk_listen.launch.py  test.launch.py
composition_tutorial/src/: basic_component.cpp  basic_component_node.cpp  camera_node.cpp  image_pipeline_all_in_one.cpp  image_view_node.cpp  talker_component.cpp  watermark_node.cpp
cpp_action_tutorial/: CMakeLists.txt  package.xml
cpp_action_tutorial/src/: parking_status_client.cpp  parking_status_server.cpp
cpp_cv_tutorial/: CMakeLists.txt  package.xml
cpp_cv_tutorial/src/: img_pub.cpp  img_sub.cpp
cpp_multiproc_tutorial/: CMakeLists.txt  package.xml
cpp_multiproc_tutorial/src/: callback_group.cpp  dead_lock.cpp  multi_executor.cpp  reentrant_callback_group.cpp  reentrant_limited.cpp
cpp_node_tutorial/: CMakeLists.txt  package.xml
cpp_node_tutorial/src/: node_example_1.cpp  node_example_2.cpp  node_example_3.cpp  node_example_4.cpp  node_example_5.cpp  node_example_6.cpp  test.cpp
cpp_param_tutorial/: CMakeLists.txt  package.xml
cpp_param_tutorial/config/: params.yaml
cpp_param_tutorial/launch/: launch_with_yaml.launch.py
cpp_param_tutorial/src/: param_example.cpp
cpp_pcl_tutorial/: CMakeLists.txt  package.xml
cpp_pcl_tutorial/data/: pcl_sub_node.pcd
cpp_pcl_tutorial/exercise/: CMakeLists.txt
cpp_pcl_tutorial/exercise/src/: example1_load_and_save.cpp  example2_voxel_downsample.cpp  example3_roi_filter.cpp  example4_ransac.cpp  example5_clustering.cpp  example6_bounding_box.cpp  rot_to_rpy.cpp
cpp_pcl_tutorial/src/: pcl_pub_sub.cpp
cpp_service_tutorial/: CMakeLists.txt  package.xml
cpp_service_tutorial/src/: spawn_object_wo_gravity.cpp  take_picture_server.cpp  turtle_circle_server.cpp  turtle_circle_server_advanced.cpp  turtle_jail.cpp  turtle_spawn.cpp
cpp_tf2_tutorial/: CMakeLists.txt  package.xml
cpp_tf2_tutorial/src/: tf2_add_frame.cpp  tf2_broadcast.cpp  tf2_listen.cpp
cpp_topic_tutorial/: CMakeLists.txt  package.xml
cpp_topic_tutorial/src/: cpp_parking_node.cpp  cpp_topic_pub_node.cpp  cpp_topic_sub_node.cpp  cv_publisher.cpp  quiz_mimic.cpp  topic_example_1_publisher.cpp  topic_example_2_subscriber.cpp  topic_example_3_mimic.cpp
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/action/: DataGen.action  Parking.action
custom_interfaces/srv/: CircleTurtle.srv
pointnet_torch/: package.xml  setup.cfg  setup.py
pointnet_torch/pointnet_torch/: pointnet_node.py
pointnet_torch/test/: datasets.py
py_action_tutorial/: setup.py
py_action_tutorial/py_action_tutorial/: dataset_generation_server.py  parking_status_client.py  parking_status_server.py
py_cv_tutorial/: setup.cfg
py_cv_tutorial/py_cv_tutorial/: img_pub.py  img_sub.py  rosbag2_to_timedimg.py
py_node_tutorial/: setup.cfg  setup.py
py_node_tutorial/py_node_tutorial/: node_example_1.py  node_example_2.py  node_example_3.py
py_param_tutorial/config/: params_namespace.yaml
py_param_tutorial/launch/: launch_with_namespace.launch.py  launch_with_param.launch.py  launch_with_yaml.launch.py
py_pcl_tutorial/: package.xml  setup.cfg  setup.py
py_pcl_tutorial/exercise/: example1_load_and_view.py  example2_voxelgrid.py  example3_roi_filter.py  example4_ransac.py  example5_clustering.py  pcl_helper_ex.py
py_pcl_tutorial/py_pcl_tutorial/: pcl_cluster_pub.py  pcl_helper.py  pcl_sub.py  pointnet_cluster_pub.py
py_service_tutorial/: setup.py
py_service_tutorial/py_service_tutorial/: pointnet_object_wo_gravity.py  spawn_object.py  spawn_object_wo_gravity.py  take_picture_server.py  turtle_circle_server.py
py_tf2_tutorial/: package.xml  setup.cfg  setup.py
py_tf2_tutorial/py_tf2_tutorial/: tf2_add_frame.py  tf2_broadcast.py  tf2_listen.py
py_topic_tutorial/: setup.cfg  setup.py
py_topic_tutorial/py_topic_tutorial/: qos_example_publisher.py  qos_example_subscriber.py  topic_example_1_publisher.py  topic_example_2_subscriber.py
sensor_stick/: CMakeLists.txt  package.xml
sensor_stick/launch/: depth_world.launch.py
sensor_stick/meshes/: asus_xtion.dae
sensor_stick/rviz/: depth_cam.rviz
sensor_stick/urdf/: sensor_stick.gazebo.xacro  sensor_stick.urdf.xacro
sensor_stick/world/: gazebo_ros_depth_camera_demo.world
src_description/launch/: src_description.launch.py
src_gazebo/: CMakeLists.txt
src_gazebo/launch/: empty_world.launch.py  new_src_empty_world.launch.py  racecourse.launch.py  topic_demo.launch.py  wall_world.launch.py
src_gazebo/rviz/: gazebo_racecourse.rviz
src_gazebo/urdf/: src_body.gazebo  src_body.urdf  src_body.urdf.xacro  src_body_new.urdf
src_gazebo/urdf/temp/: src_body_new.urdf.xacro
src_nav/launch/: bringup_launch.py
